# CafeBot

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh  zote
src/: main.rs
src/admin/: admin_test.rs  slow_mode.rs  status.rs
src/commands/: admin.rs  daily.rs  debug.rs  fun.rs  game.rs  hair.rs  help.rs  latency.rs  messagechange.rs  mod.rs  modify.rs  ping.rs  rps.rs  sarcasm.rs  slow_mode.rs  status.rs  xkcd.rs
src/commands/admin/: mod.rs  slow_mode.rs
src/commands/fun/: bruh.rs  count.rs  daily.rs  mod.rs  zote.rs
src/commands/messagechange/: mod.rs  modify.rs  owo.rs  sarcasm.rs  say.rs
src/commands/tools/: help.rs  latency.rs  mod.rs
src/database/: database.rs  mod.rs  money.rs  money_up.rs
src/fun/: blackjack.rs  bruh.rs  count.rs  daily.rs  hair.rs  mod.rs  rps.rs  tictactoe.rs  wiki.rs  xkcd.rs
src/message_change/: owo.rs  sarcasm.rs  say.rs
src/messagechange/: owo.rs  sarcasm.rs  say.rs
src/misc/: dice.rs  game.rs  mod.rs  tictactoe.rs
src/money/: blackjack.rs  coin_flip.rs  coinflip.rs  daily.rs  give.rs  interest.rs  leaderboard.rs  lootbox.rs  lottery.rs  mod.rs  money.rs  pool.rs  rps.rs  scratchoff.rs  shop.rs  stats.rs
src/tools/: custom.rs  help.rs  mod.rs  ping.rs  profile.rs  stats.rs  xkcd.rs
