[package]
name = "CafeBot"
version = "0.1.0"
authors = ["justanotherstrange"]
edition = "2018"

[dependencies]
serenity = { version = "0.10.2", default-features = true, features = ["framework", "standard_framework", "http", "client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
